# perimeter

./: .gitignore  CMDS.md  README.md
cores/: byteTrackPipeline.py  faceSearcher.py  featureProcessor.py  perimeter.py  personReid.py  predictor.py
cpp/: CMakeLists.txt  demo_test_feature_logic.py  feature_logic.cpp
cpp/face_demo/: CMakeLists.txt  FaceAnalyzer.cpp  FaceAnalyzer.hpp  main.cpp  main_face_detect.cpp  main_face_recognition.cpp
cpp/format_demo/: CMakeLists.txt  CMakeLists_arm.txt  CMakeLists_pc.txt  db_test_loader.cpp  demo_cpp.cpp  feature_processor.cpp  feature_processor.h  test_pose_pnp.cpp  update.sh
cpp/format_demo/cores/face/: CMakeLists.txt  FaceAnalyzer.cpp  FaceAnalyzer.hpp  FaceAnalyzer_dla.cpp  FaceAnalyzer_dla.hpp  PoseEstimator.cpp  PoseEstimator.hpp  main_face_detect.cpp  main_face_detect_dla.cpp  main_face_detect_dla_v1.cpp  main_face_recognition.cpp  main_face_recognition_dla.cpp
cpp/format_demo/cores/personReid/: PersonReid.hpp  PersonReid_dla.cpp  PersonReid_dla.hpp  reid_main_dla.cpp
cpp/py_cpp_mix/: demo_test_feature_logic.py  py_helper.py
cpp/reid_demo/: CMakeLists.txt  PersonReid.cpp  PersonReid.hpp  reid_main.cpp
demos/: demo.py  demo_face.py  demo_face_detect_pytorch.py  demo_face_v1.py  demo_face_v2.py  demo_face_v3.py  demo_reid.py  demo_reid_v1.py  demo_reid_v2.py  demo_reid_v3.py  demo_track.py  demo_track_v1.py  demo_v1.py  demo_v2.py  demo_v3.py  demo_v4.py  demo_v5.py  demo_v6.py  demo_v6_align.py  demo_v7.py  demo_v7_align.py  demo_yolo11.py  demo_yolo11_v1.py  fastreid_integration.py
tools/: cluster_gid.py  compare_embeddings_advanced.py  face_sim_calc.py  gid_sim_calc.py  img_show.py  imgs2bin.py  onnx_dynamic2fixed.py  onnx_gpu_test.py  reid_py2cpp_debug_tool.py  reid_sim_calc.py  res_sim_calc.py  test_frontal_face.py  test_frontal_face_3d.py  yolo11_export.py
utils/: general_funcs.py  macros.py
utils_peri/: general_funcs.py  macros.py
